[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features =["derive"]}
serde_json = "1.0"
sea-orm = { version = "0.11", features = ["sqlx-postgres","runtime-actix-native-tls" , "debug-print","macros"]}

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }